# tracing-min-exampl

./: Cargo.toml
src/: main.rs
